--- a/supermercado-flexbox-martes-v1/css/estilos.css
+++ b/supermercado-flexbox-martes-v1/css/estilos.css
@@ -1,3 +1,7 @@
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Roboto', sans-serif;
+}
+
 .menu{
     width: 100%;
     height: 100px;
@@ -79,14 +83,105 @@
     margin-right: 200px;
 }
 /* descuentos */
-.descuento{
+.descuento,
+.productos,
+.servicios{
     width: 100%;
-    height: 300px;
+    height: auto;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 .descuento img{
     width: 300px;
     height: auto;
     margin: 0 10px;
+}
+.titulo-des h2,
+.titulo-pro h2,
+.titulo-ser h2{
+    font-size: 50px;
+    color: red;
+}
+/* productos */
+.con-productos{
+    width: 75%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.tarjeta{
+    width: 300px;
+    height: auto;
+    border-radius: 15px;
+    border: 1px solid gray;
+    margin-bottom: 20px;
+}
+.tarjeta .con-texto h3{
+    font-size: 30px;
+    color:red;
+    font-weight: bold;
+    text-align: center;
+}
+.tarjeta .con-texto p{
+    font-size: 20px;
+    text-align: center;
+}
+.tarjeta .botones{
+    display: flex;
+    justify-content: space-around;
+}
+.tarjeta .botones span{
+    font-size: 20px;
+    font-weight: bold;
+}
+.tarjeta .botones a{
+    padding: 7px 12px;
+    color: white;
+    background-color: red;
+    border-radius: 10px;
+    border: 1px solid black;
+    text-decoration: none;
+}
+.tarjeta img{
+    width: 100%;
+    height: auto;
+}
+
+/*  Servicios */
+.con-servicios{
+    width: 100%;
+    height: auto;
+}
+.servicio-1,
+.servicio-2{
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+.servicio-1 img,
+.servicio-2 img{
+    width: 50%;
+}
+.servicio-1 .con-texto,
+.servicio-2 .con-texto{
+    width: 50%;
+    margin-left: 50px;
+}
+.servicio-1 .con-texto h3,
+.servicio-2 .con-texto h3{
+    font-size: 35px;
+    color: red;
+    font-weight: bold;
+}
+.servicio-1 .con-texto p,
+.servicio-1 .con-texto ul,
+.servicio-2 .con-texto p,
+.servicio-2 .con-texto ul{
+    font-size: 20px;
+    color: rgb(69, 69, 69);
 }
